Remove Issues h2 top margin to align style with Status page

--- a/src/sass/claims-status.scss
+++ b/src/sass/claims-status.scss
@@ -1055,6 +1055,10 @@ $marker-text-width: 9rem;
 .issues-container {
   margin-bottom: 2em;
 
+  &>h2 {
+    margin-top: 0;
+  }
+
   .usa-accordion-button {
     font-size: 2rem; // match standard h3
   }
